<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hipsterlogogenerator_1429647956550" />

    <TextView
        android:id="@+id/start_game_text"
        android:layout_below="@id/logo_image"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/start_game_text" />

    <Button
        android:id="@+id/button_easy"
        android:background="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_game_text"
        android:layout_toLeftOf="@id/button_medium"
        android:text="@string/easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="wrap_content"
        android:background="@drawable/shape"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:layout_below="@id/start_game_text"
        android:layout_toRightOf="@id/button_medium" />

    <TextView
        android:id="@+id/high_score_text"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_medium"
        android:text="@string/high_score"
        android:textSize="25sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_score_text"
        android:textColor="#000000" />
</RelativeLayout>
